Se cambio el tamaño de la línea del borde

--- a/holajavascript.html
+++ b/holajavascript.html
@@ -22,7 +22,7 @@
             document.write('<table>')
             for (var i = 0; i < tabla.length; i++)  {  
                 document.write('<tr>')
-                document.write('<td style="border:solid">')
+                document.write('<td style="border:solid 0.5px">')
                 document.write(tabla[i])
                 document.write('</td>')
                 document.write('</tr>')
